--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.class
+bin/controller/MemberController.class
+*.class
+bin/controller/ApplicationController.class
+*.class
